# OmniCLI

./: README.md  pyproject.toml
src/omnicli/: __init__.py  app.py
src/omnicli/cli/: main.py
src/omnicli/core/context/: environment_scanner.py  state_snapshot.py
src/omnicli/core/orchestrator/: workflow_engine.py
src/omnicli/execution/safety/: command_validator.py
src/omnicli/nlp/generation/: command_generator.py
src/omnicli/nlp/understanding/: intent_classifier.py
src/omnicli/utils/: logging_manager.py
